--- a/Embedded/rp-rot/Cargo.toml
+++ b/Embedded/rp-rot/Cargo.toml
@@ -5,16 +5,48 @@ version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-cortex-m = "0.7"
-cortex-m-rt = "0.7"
 embedded-hal = { version = "1.0.0" }
+cortex-m-rt = "0.7"
+
+embassy-executor = { version = "0.7.0", features = [
+    "task-arena-size-32768",
+    "arch-cortex-m",
+    "executor-thread",
+    "executor-interrupt",
+    "defmt",
+] }
+
+embassy-time = { version = "0.4.0", features = [
+    "defmt",
+    "defmt-timestamp-uptime",
+] }
+embassy-rp = { version = "0.4.0", features = [
+    "defmt",
+    "unstable-pac",
+    "time-driver",
+    "critical-section-impl",
+    "rp2040",
+] }
+embassy-net = { version = "0.7.0", features = [
+    "defmt",
+    "tcp",
+    "udp",
+    "medium-ethernet",
+    "proto-ipv4",
+] }
+
+cyw43 = { version = "0.3.0", features = ["defmt"] }
+cyw43-pio = { version = "0.4.0", features = ["defmt"] }
+
+embassy-net-wiznet = "0.2.0"
+embassy-futures = "0.1"
 
 defmt = "1"
 defmt-rtt = "1"
 panic-probe = { version = "1", features = ["print-defmt"] }
 
-# We're using a Pico by default on this template
-rp-pico = "0.9"
+
+heapless = "0.8"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.8"
