--- a/Embedded/rp-rot/Cargo.toml
+++ b/Embedded/rp-rot/Cargo.toml
@@ -5,8 +5,8 @@ version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-embedded-hal = { version = "1.0.0" }
 cortex-m-rt = "0.7"
+embedded-hal = { version = "1.0.0" }
 
 embassy-executor = { version = "0.7.0", features = [
     "task-arena-size-32768",
@@ -15,7 +15,6 @@ embassy-executor = { version = "0.7.0", features = [
     "executor-interrupt",
     "defmt",
 ] }
-
 embassy-time = { version = "0.4.0", features = [
     "defmt",
     "defmt-timestamp-uptime",
@@ -27,19 +26,24 @@ embassy-rp = { version = "0.4.0", features = [
     "critical-section-impl",
     "rp2040",
 ] }
+
+# WiFi and networking
 embassy-net = { version = "0.7.0", features = [
     "defmt",
     "tcp",
     "udp",
-    "medium-ethernet",
+    "dhcpv4",
     "proto-ipv4",
 ] }
 
+dotenvy = "0.15.7"
+
 cyw43 = { version = "0.3.0", features = ["defmt"] }
 cyw43-pio = { version = "0.4.0", features = ["defmt"] }
+static_cell = "1.2"
 
-embassy-net-wiznet = "0.2.0"
-embassy-futures = "0.1"
+# Use rand-core instead of rand for embedded
+rand_core = "0.6"
 
 defmt = "1"
 defmt-rtt = "1"
