--- a/Cloud/device-comms/Cargo.toml
+++ b/Cloud/device-comms/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "device-comms"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 rocket = { version = "0.5.1", features = ["secrets", "tls", "json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.140"
+dotenvy = "0.15.7"
