--- a/Cloud/device-comms/Cargo.toml
+++ b/Cloud/device-comms/Cargo.toml
@@ -8,3 +8,4 @@ rocket = { version = "0.5.1", features = ["secrets", "tls", "json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.140"
 dotenvy = "0.15.7"
+rocket_cors = "0.6.0"
