--- a/Cloud/device-comms/Cargo.toml
+++ b/Cloud/device-comms/Cargo.toml
@@ -9,3 +9,10 @@ serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.140"
 dotenvy = "0.15.7"
 rocket_cors = "0.6.0"
+azure_identity = "0.24.0"
+azure_security_keyvault_secrets = "0.3.0"
+tokio = "1.45.1"
+azure_data_cosmos = { version = "0.23.0", features = ["key_auth"] }
+chrono = { version = "0.4.30", features = ["serde"] }
+azure_core = "0.1.1"
+futures = "0.3.31"
