--- a/Embedded/rp-rot/Cargo.toml
+++ b/Embedded/rp-rot/Cargo.toml
@@ -44,14 +44,15 @@ static_cell = "1.2"
 # Use rand-core instead of rand for embedded
 rand_core = "0.6"
 
-defmt = "1"
-defmt-rtt = "1"
+defmt = "0.3"
+defmt-rtt = "0.4"
 panic-probe = { version = "1", features = ["print-defmt"] }
-
 
 heapless = "0.8"
 embedded-io = "0.6.1"
 embedded-io-async = "0.6.1"
+
+embassy-sync = "0.7.0" # For shared state
 
 
 [build-dependencies]
