Enhance telemetry functionality with tracing and error handling
- Added tracing support to monitor telemetry requests and responses.
- Introduced ApiError enum for improved error management in telemetry routes.
- Updated insert_telemetry and read_telemetry functions to utilize tracing and handle errors gracefully.
- Refactored telemetry ingestion and reading logic to return appropriate HTTP status codes based on error types.
- Added new utility functions for tracing initialization and span management.

--- a/Cloud/device-comms/Cargo.toml
+++ b/Cloud/device-comms/Cargo.toml
@@ -19,3 +19,9 @@ futures = "0.3.31"
 openssl = { version = "0.10", features = ["vendored"] }
 reqwest = { version = "0.11", features = ["json"] }
 async-trait = "0.1"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
+tracing-error = "0.2.0"
+thiserror = "1.0.58"
+color-eyre = "0.6.3"
+uuid = { version = "1.7.0", features = ["v4"] }
