--- a/Cloud/rot-fe/Cargo.toml
+++ b/Cloud/rot-fe/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2024"
 components = "0.1.0"
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 yew-router = { git = "https://github.com/yewstack/yew.git" }
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["Window", "Element", "Document"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde-wasm-bindgen = "0.6.5" 
