--- a/Cloud/rot-fe/Cargo.toml
+++ b/Cloud/rot-fe/Cargo.toml
@@ -12,3 +12,6 @@ web-sys = { version = "0.3", features = ["Window", "Element", "Document"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde-wasm-bindgen = "0.6.5" 
+wasm-bindgen-futures = "0.4"
+chrono = "0.4"
+gloo-net = "0.6.0"
