Enhance device monitoring frontend with new build and telemetry features
- Added a new `build.rs` file to manage environment variables for the frontend build process.
- Introduced a `local-docker.sh` script for simplified Docker operations.
- Updated `Cargo.toml` to include `dotenvy` as a build dependency.
- Refactored telemetry handling in the `DeviceService` to utilize environment variables for the API URL.
- Created a new `views` module and added a `TelemetryView` component for displaying device telemetry data.
- Updated the header and navbar components to reflect new navigation options.
- Removed unused telemetry view references from the components module.

--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,5 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node
 Cloud/device-monitor/scripts/local-docker.sh
+
+**/src/generated_env.rs
