--- a/Cloud/rot-fe/Cargo.toml
+++ b/Cloud/rot-fe/Cargo.toml
@@ -15,3 +15,7 @@ serde-wasm-bindgen = "0.6.5"
 wasm-bindgen-futures = "0.4"
 chrono = "0.4"
 gloo-net = "0.6.0"
+
+
+[build-dependencies]
+dotenvy = "0.15.7"
