--- a/Pipelines/build-rot-fe.yml
+++ b/Pipelines/build-rot-fe.yml
@@ -15,6 +15,7 @@ variables:
   containerRegistry: 'rotpoccr.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Cloud/rot-fe/Dockerfile'
   tag: '$(Build.BuildId)'
+  ROT_API_URL: '$(ROT_API_URL)'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
@@ -34,7 +35,8 @@ stages:
         command: buildAndPush
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
-        arguments: -e $(ROT_API_URL)
+        buildContext: '$(Build.SourcesDirectory)/Cloud/rot-fe'
+        arguments: '--build-arg ROT_API_URL=$(ROT_API_URL)'
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
