--- a/Pipelines/build-rot-fe.yml
+++ b/Pipelines/build-rot-fe.yml
@@ -15,7 +15,6 @@ variables:
   containerRegistry: 'rotpoccr.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Cloud/rot-fe/Dockerfile'
   tag: '$(Build.BuildId)'
-  ROT_API_URL: '$(ROT_API_URL)'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
@@ -36,7 +35,8 @@ stages:
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
         buildContext: '$(Build.SourcesDirectory)/Cloud/rot-fe'
-        arguments: '--build-arg ROT_API_URL=$(ROT_API_URL)'
+        buildArguments: |
+          --build-arg ROT_API_URL=$(ROT_API_URL)
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
