--- a/Cloud/rot-fe/Cargo.toml
+++ b/Cloud/rot-fe/Cargo.toml
@@ -15,7 +15,11 @@ serde-wasm-bindgen = "0.6.5"
 wasm-bindgen-futures = "0.4"
 chrono = "0.4"
 gloo-net = "0.6.0"
-
+color-eyre = "0.6.5"
+thiserror = "2.0.12"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.17"
+tracing-wasm = "0.2.1"
 
 [build-dependencies]
 dotenvy = "0.15.7"
