Add device configuration fetching and management
- Introduced a new `config_fetch` task to periodically fetch device configurations from a remote server.
- Added a `DeviceConfigItem` struct to represent device configurations, including LED state management.
- Implemented a global config store for managing device configurations.
- Updated `main.rs` to initialize the config store and spawn the config fetch task.
- Enhanced the build script to include new environment variables for configuration management.

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ Cloud/device-monitor/scripts/local-docker.sh
 **/src/generated_env.rs
 Cloud/rot-fe/scripts/local-docker.sh
 
+Cloud/device-config/scripts/local-docker.sh
