--- a/Embedded/rp-rot/Cargo.toml
+++ b/Embedded/rp-rot/Cargo.toml
@@ -50,12 +50,14 @@ defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "1", features = ["print-defmt"] }
 
-heapless = "0.8"
+heapless = { version = "0.8", features = ["serde"] }
 embedded-io = "0.6.1"
 embedded-io-async = "0.6.1"
 
 embassy-sync = "0.7.0" # For shared state
 
+serde = { version = "1.0", default-features = false, features = ["derive"] }
+serde-json-core = "0.5"
 
 [build-dependencies]
 dotenvy = "0.15"
