--- a/Pipelines/build-rot-fe.yml
+++ b/Pipelines/build-rot-fe.yml
@@ -38,6 +38,7 @@ stages:
         echo "##[command]Building with ROT_API_URL: $(ROT_API_URL)"
         docker build -t $(containerRegistry)/$(imageRepository):$(tag) \
           --build-arg ROT_API_URL="$(ROT_API_URL)" \
+          --build-arg ROT_DC_URL="$(ROT_DC_URL)" \
           -f $(dockerfilePath) \
           $(Build.SourcesDirectory)/Cloud/rot-fe
         docker push $(containerRegistry)/$(imageRepository):$(tag)
